# oci-lexer-parser

./: .gitignore  Contributing.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-release.yml  publish.yml  unit-tests.yml
docs/: CLI_Usage.md  Examples.md  Roadmap.md
docs/schema/: Dynamic_Group_Schema.md  Policy_Schema.md
docs/sdk/: Dynamic_Group_SDK.md  Policy_SDK.md
scripts/: pyinstaller_entry.py
src/oci_lexer_parser/: __init__.py  cli.py  parser_dynamic_group_matching_rules.py  parser_policy_statements.py  parser_utils.py
src/oci_lexer_parser/grammar/: DynamicGroupMatchingRule.g4  PolicyStatement.g4
src/tests/: conftest.py  test_cli.py  test_dynamic_group.py  test_fixtures.py  test_generate_json.py  test_golden_outputs.py  test_policy.py
src/tests/fixtures/cli/: 01_simple.json  01_simple.txt  02_multi_stmt.json  02_multi_stmt.txt  03_dynamic_group_matching_rules.json  03_dynamic_group_matching_rules.txt  04_define_tenancy.json  04_define_tenancy.txt  05_bad_statement.json  05_bad_statement.txt
src/tests/fixtures/dynamic_group/: 01_all_basic.json  01_all_basic.txt  02_nested_any_any.json  02_nested_any_any.txt  03_any_single_child_all.json  03_any_single_child_all.txt  04_depth4_recursive.json  04_depth4_recursive.txt  05_multiple_rules_newlines.json  05_multiple_rules_newlines.txt  06_comma_inside_string_and_newline.json  06_comma_inside_string_and_newline.txt  07_lowercase_any_all.json  07_lowercase_any_all.txt  08_not_equal_predicate.json  08_not_equal_predicate.txt  09_error_bad_path.json  09_error_bad_path.txt  10_depth3_varied_tags.json  10_depth3_varied_tags.txt  11_all_any_nested.json  11_all_any_nested.txt  12_all_all_nested.json  12_all_all_nested.txt  13_error_missing_brace.json  13_error_missing_brace.txt
src/tests/fixtures/policy/: matrix_all.txt
src/tests/fixtures/policy/edge/: 01_block_comments_mixed.json  01_block_comments_mixed.txt  02_empty_and_comments.json  02_empty_and_comments.txt  03_missing_resource.json  (+1 more)
src/tests/support/: helpers.py
(+3654 files in other folders)
